[gd_scene load_steps=10 format=3 uid="uid://dvh7vxw1rd5r"]

[ext_resource type="ArrayMesh" uid="uid://dtxg5fx7frl4v" path="res://modeles3d/potion_premanente.obj" id="1_7iyo8"]
[ext_resource type="Script" path="res://scenes/item/potion_de_force.gd" id="1_wrron"]
[ext_resource type="Texture2D" uid="uid://c0opy3beyrttp" path="res://images/textures/Concrete039_4K-JPG_Color.jpg" id="2_itn8a"]
[ext_resource type="AudioStream" uid="uid://bnhkrlirkyhfq" path="res://sons/potion_take.wav" id="4_vk8xh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nqr7o"]
albedo_texture = ExtResource("2_itn8a")
metallic = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6hmk1"]
transparency = 1
albedo_color = Color(0.25098, 0.486275, 0.709804, 0.239216)
metallic = 1.0
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ag45l"]
transparency = 1
albedo_color = Color(0.568035, 0.458121, 0, 0.756863)
metallic = 1.0
roughness = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a0f3e"]
height = 0.201377
radius = 0.0506019

[sub_resource type="CylinderShape3D" id="CylinderShape3D_x8t18"]
height = 0.299219
radius = 0.120704

[node name="Potion_de_force" type="Node3D" groups=["prehensible"]]
script = ExtResource("1_wrron")

[node name="PotionPremanente" type="MeshInstance3D" parent="."]
layers = 8
mesh = ExtResource("1_7iyo8")
surface_material_override/0 = SubResource("StandardMaterial3D_nqr7o")
surface_material_override/1 = SubResource("StandardMaterial3D_6hmk1")
surface_material_override/2 = SubResource("StandardMaterial3D_ag45l")

[node name="interaction_area" type="Area3D" parent="." groups=["prehensible"]]
collision_layer = 8
collision_mask = 0

[node name="interaction_form" type="CollisionShape3D" parent="interaction_area" groups=["prehensible"]]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.0332536, 0)
shape = SubResource("CylinderShape3D_a0f3e")

[node name="Potion de force" type="StaticBody3D" parent="." groups=["prehensible"]]
collision_layer = 8

[node name="body_collision2" type="CollisionShape3D" parent="Potion de force"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0.0422906, 0)
shape = SubResource("CylinderShape3D_x8t18")

[node name="audio_pick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vk8xh")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
